Add Node.js backend APIs and fix frontend login flow
- Add Express/Node.js backend on port 3001
- Add auth, training, feedback, enrollment APIs
- Add JWT authentication middleware
- Fix frontend to use port 3001 APIs
- Add role-based routing (ADMIN/TRAINER/PARTICIPANT)
- Add trainer rating + subject rating feedback system
- Add CRUD operations for admin
- Update login with Bearer token auth